<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nominatim Geocoder Backend</string>
    <string name="backend_name">Nominatim</string>

    <string name="choose_server">Choose Nominatim API Server</string>
    <string name="server_access">MapQuest Server Access</string>
    <string name="api_title">MapQuest Developer API Key</string>
    <string name="api_summary">MapQuest Developer API Key</string>
    <string name="api_dialog_title">Enter your MapQuest developer API key.</string>
    <string name="preferences">Preferences</string>
    <string name="debug_category_title">Debug</string>
    <string name="power_options_title">Power options</string>
    <string name="clear_cache_button">Clear cache</string>
    <string name="db_info">Information about cache</string>
    <string name="db_header">Address cache database</string>
    <string name="wake_up_strategy_summary">When location stucks when phone sleeps you can try to wake up phone when cell is looked for</string>
    <string name="wake_up_strategy_title">Wake up strategy</string>
    <string name="nowakeup_label">No wake up</string>
    <string name="wakeuppartial_label">Wake up CPU only</string>
    <string name="wakeupfull_label">Wake up with display</string>
    <string name="debug_choose_file">Select directory for logging</string>
    <string name="log_file_lasting_summary">After specified number of time log file will recreated</string>
    <string name="log_file_lasting_title">Rotation of the log file</string>
    <string name="log_file_12_label">12 hours</string>
    <string name="log_file_24_label">a day</string>
    <string name="log_file_48_label">two days</string>
    <string name="log_file_72_label">three days</string>
    <string name="log_file_168_label">a week</string>
    <string name="log_file_720_label">a month</string>
    <string name="location_cache_lasting_summary">After specified number of time cached values will be removed</string>
    <string name="location_cache_lasting_title">The age of cached values</string>
    <string name="location_cache_12_label">12 hours</string>
    <string name="location_cache_24_label">a day</string>
    <string name="location_cache_168_label">a week</string>
    <string name="location_cache_720_label">a month</string>
    <string name="location_cache_2190_label">three months</string>
    <string name="location_cache_4380_label">six months</string>
    <string name="location_cache_8760_label">a year</string>
    <string name="location_cache_88888_label">never</string>
</resources>
