<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="OSM"
        android:title="@string/choose_server"
        android:entries="@array/ApiChoice"
        android:entryValues="@array/ApiChoice"
        android:key="api_server_choice"
        />

    <PreferenceCategory
        android:key="cat_api_preference"
        android:title="@string/server_access">

        <EditTextPreference
            android:key="api_preference"
            android:title="@string/api_title"
            android:dialogTitle="@string/api_dialog_title"
            android:defaultValue=""
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/db_header"
        android:key="db_header">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="location.cache.enabled"
            android:summaryOff="Found locations is not cached"
            android:summaryOn="Found locations is cached"
            android:title="Cache locations" />
        <ListPreference
                android:defaultValue="720"
                android:entries="@array/location_cache_lasting_entries"
                android:entryValues="@array/location_cache_lasting_values"
                android:key="location.cache.lasting"
                android:summary="@string/location_cache_lasting_summary"
                android:title="@string/location_cache_lasting_title"/>
        <Preference android:title="@string/clear_cache_button"
                    android:key="clear_cache_button" />
        <Preference android:title="@string/db_info"
                    android:key="db_info" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/power_options_title">
        <ListPreference
                android:defaultValue="nowakeup"
                android:entries="@array/wake_up_strategy_entries"
                android:entryValues="@array/wake_up_strategy_values"
                android:key="wake.up.strategy"
                android:summary="@string/wake_up_strategy_summary"
                android:title="@string/wake_up_strategy_title"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/debug_category_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug.to.file"
            android:summaryOff="Don't log to file"
            android:summaryOn="Log to file"
            android:title="Log to file" />
        <ListPreference
            android:defaultValue="24"
            android:entries="@array/log_file_lasting_entries"
            android:entryValues="@array/log_file_lasting_values"
            android:key="debug.file.lasting.hours"
            android:summary="@string/log_file_lasting_summary"
            android:title="@string/log_file_lasting_title"/>
        <Preference android:title="@string/debug_choose_file"
                    android:key="debug.log.file" />
    </PreferenceCategory>
</PreferenceScreen>